examples/test/testpolicy683.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy683
  namespace: namespace457
spec:
  podSelector:
    matchLabels:
      key9: value8
      key41: value11
      key32: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value35
          key41: value41
          key20: value21
      podSelector:
        matchLabels:
          key48: value10
          key35: value36
          key29: value5
